@@ -24,9 +24,9 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "php": ">=5.6.0,<7.99.99",
-    "typo3/cms-core": ">=6.2.0,<8.99.99",
-    "jambagecom/div2007": ">=1.10.16"
+    "php": ">=5.6.0,<7.3.99",
+    "typo3/cms-core": ">=6.2.1,<9.5.99",
+    "jambagecom/div2007": ">=1.10.20"
   },
   "suggest": {
     "jambagecom/migration_core": ">=0.0.0"
