@@ -8,7 +8,7 @@ $EM_CONF[$_EXTKEY] = array(
     'title' => 'Payment Transactor API',
     'description' => 'This is a basic API to develop extensions which connect to different payment transaction gateways.',
     'category' => 'misc',
-    'version' => '0.7.3',
+    'version' => '0.8.0',
     'state' => 'stable',
     'uploadfolder' => 0,
     'createDirs' => '',
@@ -18,9 +18,9 @@ $EM_CONF[$_EXTKEY] = array(
     'author_company' => '',
     'constraints' => array(
         'depends' => array(
-            'php' => '5.6.0-7.99.99',
-            'typo3' => '6.2.1-8.99.99',
-            'div2007' => '1.10.16-0.0.0',
+            'php' => '5.6.0-7.3.99',
+            'typo3' => '6.2.1-9.5.99',
+            'div2007' => '1.10.20-0.0.0',
         ),
         'conflicts' => array(
         ),
